--- a/app/src/main/res/layout/edit_contact.xml
+++ b/app/src/main/res/layout/edit_contact.xml
@@ -212,7 +212,7 @@
         app:layout_constraintTop_toBottomOf="@+id/et_nameP" />
 
     <TextView
-        android:id="@+id/tv_address"
+        android:id="@+id/tv_contactAddress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="6dp"
@@ -239,7 +239,7 @@
         android:text="Street"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_address" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_contactAddress" />
 
     <EditText
         android:id="@+id/editText3"
